--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,5 +2,10 @@
 html
   head
     title= title
+    link(rel='stylesheet', href='/stylesheets/codemirror.css')
+    link(rel='stylesheet', href='/stylesheets/codemirror_theme/monokai.css')
     link(rel='stylesheet', href='/stylesheets/application.css')
+    script(src='/javascripts/codemirror.js')
+    script(src='/javascripts/mode_javascript.js')
+    script(src='/javascripts/application.js')
   body!= body
