--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,9 @@ html
     link(rel='stylesheet', href='/stylesheets/codemirror.css')
     link(rel='stylesheet', href='/stylesheets/codemirror_theme/monokai.css')
     link(rel='stylesheet', href='/stylesheets/application.css')
+    script(src='http://localhost:4000/socket.io/socket.io.js')
     script(src='/javascripts/codemirror.js')
     script(src='/javascripts/mode_javascript.js')
+    script(src='/javascripts/jquery.js')
     script(src='/javascripts/application.js')
   body!= body
