--- a/views/scraper/show.jade
+++ b/views/scraper/show.jade
@@ -4,5 +4,5 @@ div.scraper(id=scraper._id)
 	textarea#code(name="code")
 		#{scraper.code}
 
-	iframe#result
-		#{target}
+	iframe#result(style="width: 50%; height: 500px")
+		| !{scraper.html}
