added link to header h1

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,5 +13,6 @@ html
   body
     div
         header
-            h1 Reactive Scraper
+            h1
+                a(href="/") Reactive Scraper
         #content!= body
