added jslint to project

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/codemirror_theme/monokai.css')
     link(rel='stylesheet', href='/stylesheets/application.css')
     script(src='/socket.io/socket.io.js')
+    script(src='/javascripts/jslint.js')
     script(src='/javascripts/codemirror.js')
     script(src='/javascripts/mode_javascript.js')
     script(src='/javascripts/jquery.js')
