--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -186,7 +186,23 @@ body {
 		width: 59%;
 		min-height: 600px;
 	}
-
+	#content #result{
+		background-color: #F7F7F7;
+		border: 1px solid #333;
+		border-radius: 5px;
+		padding: 5px;
+		max-height: 300px;
+		width: auto;
+		bottom: 0;
+		position: fixed;
+		z-index: 9999;
+		font-family: "Helvetica Neue", Helvetica, Verdana, sans-serif;
+		font-size: 12px;
+	}
+	#result table td{
+		border: 1px solid #C44D58;
+		padding: 10px;
+	}
 a {
   color: #00B7FF;
 }
