--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -191,17 +191,33 @@ body {
 		border: 1px solid #333;
 		border-radius: 5px;
 		padding: 5px;
-		max-height: 300px;
 		width: auto;
 		bottom: 0;
 		position: fixed;
 		z-index: 9999;
 		font-family: "Helvetica Neue", Helvetica, Verdana, sans-serif;
 		font-size: 12px;
+ 	}
+ 	#content #result h2{
+ 		float: left;
+	}
+	#content #result .close{
+		float: right;
+		padding: 0 0 0 10px;
+		text-decoration: none;
+		color: red;
+	}
+	#content #result #data, #content #result .close{
+		display: none;
+	}
+	#content #result.opened #data, #content #result.opened .close{
+		display: block;
 	}
 	#result table td{
 		border: 1px solid #C44D58;
 		padding: 10px;
+		max-height: 300px;
+		overflow: auto;
 	}
 a {
   color: #00B7FF;
