--- a/views/scraper/show.jade
+++ b/views/scraper/show.jade
@@ -1,9 +1,7 @@
 h2#title Scraper ##{scraper._id}
 span#scraper-url
   a(href=scraper.url) #{scraper.url.replace(/http(|s):\/\//, "").slice(0,20)}...
-
-a(href="#run", id="run_code") run 
-span.loading(style= "display: none") Loading...
+  span.loading Loading...
 div.scraper(id=scraper._id)
   textarea#code(name="code")
     #{scraper.code}
