--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -214,20 +214,30 @@ body {
 		width: 59%;
 		min-height: 600px;
 	}
-	#result{
+	aside{
+		position: fixed;
+		bottom: 0;
+		padding: 5px;
+		z-index: 9999;
+		width: auto;
+	}
+	#result, #error{
 		background-color: #F7F7F7;
 		border: 1px solid #333;
 		border-radius: 5px;
-		padding: 5px;
 		width: auto;
-		bottom: 0;
-		position: fixed;
-		z-index: 9999;
 		font-family: "Helvetica Neue", Helvetica, Verdana, sans-serif;
 		font-size: 12px;
+		overflow: hidden;
+		float: left;
+		padding: 5px;
  	}
- 	#result h2{
+ 	#result h2, #error h2{
  		float: left;
+ 		font-size: 14px;
+	}
+	#result h2{
+		color: blue;
 	}
 	#result .close{
 		float: right;
@@ -235,10 +245,12 @@ body {
 		text-decoration: none;
 		color: red;
 	}
+
 	#data{
 		clear: both;
 		max-height: 300px;
-		overflow: auto
+		overflow-y: auto;
+		padding: 0 5px;
 	}
 	#result #data, #result .close{
 		display: none;
@@ -251,6 +263,16 @@ body {
 		padding: 10px;
 		max-height: 300px;
 		overflow: auto;
+	}
+	#error{
+		border: 1px solid red;
+		float: left;
+	}
+	#error ul{
+		clear: both;
+	}
+	#error ul li{
+		padding: 5px 0;
 	}
 a {
   color: #00B7FF;
