using scraper-info instead aside tag

--- a/views/scraper/show.jade
+++ b/views/scraper/show.jade
@@ -11,7 +11,7 @@ div.scraper(id=scraper._id)
     | !{scraper.html}
 
 
-aside
+div#scraper-info
   #result
     h2 Result
     a(href='#result', class='close') x
