--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@
 html
   head
     title= title
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/codemirror.css')
     link(rel='stylesheet', href='/stylesheets/codemirror_theme/monokai.css')
     link(rel='stylesheet', href='/stylesheets/application.css')
@@ -9,6 +10,7 @@ html
     script(src='/javascripts/jslint.js')
     script(src='/javascripts/codemirror.js')
     script(src='/javascripts/mode_javascript.js')
+    script(src='/javascripts/underscore.js')
     script(src='/javascripts/jquery.js')
     script(src='/javascripts/application.js')
   body
