--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -153,6 +153,7 @@ body {
 		float: right;
 		width: 59%;
 		min-height: 600px;
+		border: 0;
 	}
 	#scraper-info{
 		position: fixed;
@@ -163,21 +164,31 @@ body {
 	}
 	#result, #error{
 		background-color: #F7F7F7;
-		border: 1px solid #333;
-		border-radius: 5px;
+		border-radius: 3px;
 		width: auto;
 		font-family: "Helvetica Neue", Helvetica, Verdana, sans-serif;
 		font-size: 12px;
 		overflow: hidden;
 		float: left;
 		padding: 5px;
+		margin-right: 5px;
  	}
+ 	#result{
+ 		border: 1px solid #00B7FF;
+ 	}
+ 	#error{
+		border: 1px solid red;
+	}
  	#result h2, #error h2{
  		float: left;
  		font-size: 14px;
+ 		margin: 0;
 	}
 	#result h2{
-		color: blue;
+		color: #00B7FF;
+	}
+	#error h2{
+		color: #FF6B6B;
 	}
 	#result .close{
 		float: right;
@@ -185,12 +196,11 @@ body {
 		text-decoration: none;
 		color: red;
 	}
-
 	#data{
 		clear: both;
 		max-height: 300px;
 		overflow-y: auto;
-		padding: 0 5px;
+		padding: 0 20px 0 0;
 	}
 	#result #data, #result .close{
 		display: none;
@@ -198,18 +208,10 @@ body {
 	#result.opened #data, #result.opened .close{
 		display: block;
 	}
-	#result table td{
-		border: 1px solid #C44D58;
-		padding: 10px;
-		max-height: 300px;
-		overflow: auto;
-	}
-	#error{
-		border: 1px solid red;
-		float: left;
-	}
+
 	#error ul{
 		clear: both;
+		padding: 0 0 0 20px;
 	}
 	#error ul li{
 		padding: 5px 0;
