added working progress in home

--- a/views/scraper/new.jade
+++ b/views/scraper/new.jade
@@ -6,6 +6,8 @@ form#scraper_new(action="/scraper", method="POST")
 
 aside
   h2 About
+  h3
+    em(style='color: red') Working in progress...
   p
     strong Reactive Scraper
     \is a easy way to scrape data in the web and share it. Reactive Scraper use only browser technology, this means you build your bot with Javascript, using
